// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FeedbackBanner Complex children 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -6px;
  margin-right: -6px;
}

.c1 > * {
  padding-left: 6px;
  padding-right: 6px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #FFCF00;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  background-color: #F5F5F5;
  border-left: 4px solid #FFCF00;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span>
      <svg
        aria-hidden="true"
        className="c2"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 92 90"
      >
        <path
          d="M46 0l46 89.3913043H0z"
        />
        <path
          d="M50 63.8333333v8h-8v-8h8zm0-28v24h-8v-24h8z"
          fill="#FFF"
        />
      </svg>
    </span>
    <div
      className="c3 c4"
    >
      <span
        className="c5"
      >
        Warning, complex child
      </span>
      <span
        className="c6"
      >
        <div>
          <div>
            The message can also be structured as a more complex item than just a string
          </div>
          <div>
            For example, you can provide a Spinner 
             if you want to
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FeedbackBanner Default usage 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -6px;
  margin-right: -6px;
}

.c1 > * {
  padding-left: 6px;
  padding-right: 6px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  fill: #FFFFFF;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  background-color: #F5F5F5;
  border-left: 4px solid #0046FF;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c5 {
  width: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span>
      <svg
        aria-hidden="true"
        className="c2"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 20 20"
      >
        <path
          d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
        />
        <polygon
          className="c3"
          points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
        />
      </svg>
    </span>
    <div
      className="c4 c5"
    >
      <span
        className="c6"
      >
        Feedback banner
      </span>
      <span
        className="c7"
      >
        Feedback banner should be used within modules to display information that needs attention. Content is flexible, it can contain links and plain text.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FeedbackBanner Different variant 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -6px;
  margin-right: -6px;
}

.c4 > * {
  padding-left: 6px;
  padding-right: 6px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #FFCF00;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c18 {
  fill: #00D200;
}

.c19 {
  fill: #FFF;
}

.c14 {
  fill: #FFF;
}

.c13 {
  fill: #FF1900;
}

.c6 {
  fill: #FFFFFF;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  background-color: #F5F5F5;
  border-left: 4px solid #0046FF;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c11 {
  background-color: #F5F5F5;
  border-left: 4px solid #FF1900;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c15 {
  background-color: #F5F5F5;
  border-left: 4px solid #FFCF00;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c17 {
  background-color: #F5F5F5;
  border-left: 4px solid #00D200;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c8 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      info
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <span>
            <svg
              aria-hidden="true"
              className="c5"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 20 20"
            >
              <path
                d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
              />
              <polygon
                className="c6"
                points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
              />
            </svg>
          </span>
          <div
            className="c7 c8"
          >
            <span
              className="c9"
            >
              Info
            </span>
            <span
              className="c10"
            >
              This is an information message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      error
    </div>
    <div>
      <div
        className="c11"
      >
        <div
          className="c4"
        >
          <span>
            <svg
              aria-hidden="true"
              className="c12"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <polygon
                  className="c13"
                  points="16.8 0 24 7.2 24 16.8 16.8 24 7.2 24 0 16.8 0 7.2 7.2 0"
                />
                <path
                  className="c14"
                  d="M13,17 L13,19 L11,19 L11,17 L13,17 Z M13,5 L13,15 L11,15 L11,5 L13,5 Z"
                />
              </g>
            </svg>
          </span>
          <div
            className="c7 c8"
          >
            <span
              className="c9"
            >
              Error
            </span>
            <span
              className="c10"
            >
              This is an error message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      warning
    </div>
    <div>
      <div
        className="c15"
      >
        <div
          className="c4"
        >
          <span>
            <svg
              aria-hidden="true"
              className="c16"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 92 90"
            >
              <path
                d="M46 0l46 89.3913043H0z"
              />
              <path
                d="M50 63.8333333v8h-8v-8h8zm0-28v24h-8v-24h8z"
                fill="#FFF"
              />
            </svg>
          </span>
          <div
            className="c7 c8"
          >
            <span
              className="c9"
            >
              Warning
            </span>
            <span
              className="c10"
            >
              This is a warning message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      success
    </div>
    <div>
      <div
        className="c17"
      >
        <div
          className="c4"
        >
          <span>
            <svg
              aria-hidden="true"
              className="c12"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <path
                  className="c18"
                  d="M12 23.87c6.627 0 12-5.315 12-11.87C24 5.445 18.627.13 12 .13S0 5.445 0 12c0 6.555 5.373 11.87 12 11.87z"
                />
                <path
                  className="c19"
                  d="M16.474 8.87l.933.927L11 16.174l-3.88-3.861.933-.928L11 14.318z"
                />
              </g>
            </svg>
          </span>
          <div
            className="c7 c8"
          >
            <span
              className="c9"
            >
              Success
            </span>
            <span
              className="c10"
            >
              This is a success message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FeedbackBanner Displaying title 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -6px;
  margin-right: -6px;
}

.c4 > * {
  padding-left: 6px;
  padding-right: 6px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  fill: #FFFFFF;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  background-color: #F5F5F5;
  border-left: 4px solid #0046FF;
  padding: 4px 12px;
  box-sizing: border-box;
}

.c8 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      With title
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <span>
            <svg
              aria-hidden="true"
              className="c5"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 20 20"
            >
              <path
                d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
              />
              <polygon
                className="c6"
                points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
              />
            </svg>
          </span>
          <div
            className="c7 c8"
          >
            <span
              className="c9"
            >
              This is a title
            </span>
            <span
              className="c10"
            >
              This message has a title
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Without title
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <span>
            <svg
              aria-hidden="true"
              className="c5"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 20 20"
            >
              <path
                d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
              />
              <polygon
                className="c6"
                points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
              />
            </svg>
          </span>
          <div
            className="c7 c8"
          >
            <span
              className="c10"
            >
              This message does not have a title
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
